--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.22"
+    "@types/styled-components": "^5.1.22",
+    "@types/uuid": "^8.3.4"
   }
 }
